<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:title="@string/anime_top_list"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_oscar"
            android:id="@+id/anime_top_list"/>

        <item
            android:title="@string/anime_by_genre"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_popcorn"
            android:id="@+id/anime_by_genre"/>
        <item
            android:title="@string/anime_schedule"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_calendar_small"
            android:id="@+id/anime_schedule"/>

    </group>

    <item android:title="@string/search">
        <menu>
            <item
                android:title="@string/search_anime"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_magnifying_glass"
                android:id="@+id/search_anime"/>
            <item
                android:title="@string/search_user"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_anime_boy_with_tie"
                android:id="@+id/search_user"/>
        </menu>
    </item>

</menu>